<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ESCO²M</string>
    <string name="logotipo">ESCO²M</string>
    <string name="channel_name">Analizador</string>
    <string name="channel_id_1">Analizador01</string>
    <string name="channel_id_2">Analizador02</string>
    <string name="channel_id_3">ExceptionHandler</string>
    <string name="channel_description_1">Analizador activo para detectar un consumo de energía excesivo</string>
    <string name="channel_description_2">Por medio del modelo matemático, el analizador ha detectado un consumo excesivo de energía</string>
    <string name="channel_description_3">Manejador de Errores</string>
    <string name="netflix">Netflix</string>
    <string name="disneyplus">Disney+</string>
    <string name="starplus">Star+</string>
    <string name="primevideo">Prime Video</string>
    <string name="max">Max</string>
    <string name="crunchyroll">Crunchyroll</string>
    <string name="vix">ViX</string>
    <string name="extra_0">CATEGORIA</string>
    <string name="extra_1_1">CCPM</string>
    <string name="extra_1_2">MEDIA</string>
    <string name="extra_1_3">DESVEST</string>
    <string name="extra_1_4">PZ</string>
    <string name="broadcast_action_1">IGNORAR (5 MIN)</string>
    <string name="broadcast_action_2">PRIMERA VEZ</string>
    <string name="notification_tv_01">Se detectó un consumo excesivo de energía a las %s mientras visualizaba la aplicación %s.\n\nPor lo cuál se recomienda disminuir el brillo de la pantalla, cerrar otras aplicaciones o tomar un pequeño descanso.</string>
    <string name="notification_tv_02">Presione para Ver los Detalles Específicos…</string>
    <string name="notification_tv_03">Aplicación de VS: %s\nHora Detectada: %s\nEstado del Dispositivo: %s\nVoltaje detectado: %.2f\nCCpm (Modelo): %.2f\nMedia (Modelo): %.2f\nDesviación Estándar (Modelo): %.2f\nProbabilidad de Consumo Excesivo (Modelo): %.2f</string>
    <string name="main_btn_01">Selección de aplicación de Video Streaming</string>
    <string name="main_btn_02">Ver el comportamiento de la batería</string>
    <string name="main_btn_03">Ver huella de carbono generada</string>
    <string name="main_btn_04">Ver prácticas sostenibles</string>
    <string name="main_tv_01">Acuerdo de Privacidad</string>
    <string name="second_tv_01">Selección de aplicación de Video Streaming</string>
    <string name="second_ibtn_netflix">com.netflix.mediaclient</string>
    <string name="second_ibtn_disneyplus">com.disney.disneyplus</string>
    <string name="second_ibtn_starplus">com.disney.starplus</string>
    <string name="second_ibtn_primevideo">com.amazon.avod.thirdpartyclient</string>
    <string name="second_ibtn_max">com.wbd.stream</string>
    <string name="second_ibtn_crunchyroll">com.crunchyroll.crunchyroid</string>
    <string name="second_ibtn_vix">com.univision.prendetv</string>
    <string name="third_tv">NO EXISTEN DATOS QUE MOSTRAR\n\nCOMIENCE UTILIZANDO UNA APLICACIÓN DE VIDEO STREAMING</string>
    <string name="third_tv_01">Comportamiento de la Batería</string>
    <string name="third_tv_02">Filtrar por:</string>
    <string name="third_btn_01">Aplicación\nde VS</string>
    <string name="third_btn_02">Uso de\nla App</string>
    <string name="third_btn_03">Estado de\nla Batería</string>
    <string name="third_btn_04">Consumo de\nla Carga</string>
    <string name="third_chip_03_01">Cargando</string>
    <string name="third_chip_03_02">Descargando</string>
    <string name="third_chip_04_01">Consumo Regular</string>
    <string name="third_chip_04_02">Consumo Excesivo</string>
    <string name="fourth_tv_01">Su\nhuella de carbono\nes de</string>
    <string name="fourth_tv_02">Que es equivalente a</string>
    <string name="fourth_tv_11">%.2f gCO2e</string>
    <string name="fourth_tv_12">%.2f litros\nde gasolina\nconsumidos</string>
    <string name="fourth_tv_13">%.2f kilómetros\nrecorridos por un\nvehículo de pasajeros\n(4 llantas y 2 ejes)</string>
    <string name="fourth_tv_14">%.2f kilogramos\nde gas usados\npara cocinar</string>
    <string name="fourth_tv_15">%.2f kilogramos\nde carbón\nquemados</string>
    <string name="fourth_iv_01">Gasoline Icon</string>
    <string name="fourth_iv_02">Vehicle Icon</string>
    <string name="fourth_iv_03">Gas Icon</string>
    <string name="fourth_iv_04">Coal Icon</string>
    <string name="fourth_btn_01_0">Ver Huella de Carbono por Uso de Aplicaciones de Video Streaming</string>
    <string name="fourth_tl_tv_01">Inicio</string>
    <string name="fourth_tl_tv_02">Fin</string>
    <string name="fourth_tl_tv_03">Aplicación</string>
    <string name="fourth_tl_tv_04">Huella de Carbono</string>
    <string name="fifth_tv_01">Prácticas Sostenibles</string>
    <string name="fifth_btn_prv">Consejo\nAnterior</string>
    <string name="fifth_btn_nxt">Siguiente\nConsejo</string>
    <string name="sixth_tv_01">Acuerdo de Privacidad</string>
    <string name="sixth_tv_02">Si continua utilizando esta aplicación, significa que usted está de acuerdo con el siguiente Acuerdo de Privacidad.</string>
    <string name="sixth_tv_03" tools:ignore="Typos">
        El presente Acuerdo de Privacidad establece los términos en que la aplicación Energy Spent and CO² Manager (ESCO²M) usa y protege la información que es proporcionada por sus usuarios al momento de utilizarla.\nEl equipo responsable por esta aplicación (de aquí en adelente: \"Administradores\") está comprometido con la seguridad de los datos de sus usuarios.\nCuando se recaba la información con la cual el usuario pueda ser identificado, se hace asegurándose que sólo se empleará de acuerdo con los términos de este documento.\nSin embargo este Acuerdo de Privacidad puede cambiar con el tiempo o ser actualizado por lo que se recomienda y enfatiza al usuario revisar continuamente esta sección para asegurarse que está de acuerdo con dichos cambios.
        \n\nInformación que es recogida
        \n\nESCO²M podrá recoger información relacionada a lo siguiente:
        \n\n■ Valores para identificar el dispositivo, por ejemplo: Fabricante, Marca, Modelo, Versión de Android.
        \n■ Atributos del estado de la batería, por ejemplo: Carga restante en unidades de microamperios-hora, Voltaje presente en el dispositivo, Nivel de energía en porcentaje, Estado del dispositivo.
        \n■ Características de la aplicación de Video Streaming ejecutada, por ejemplo: Nombre de la aplicación, Fecha y hora en que se comenzo a usar, Fecha y hora en que se termino de visualizar.
        \n\nUso de la información recogida
        \n\nESCO²M emplea la información con el fin de analizar el comportamiento de la batería cuando el usuario utiliza una aplicación de Video Streaming, particularmente para detectar cuando el consumo de la batería es excesivo y así notificarlo al usuario para que este tenga un cuidado responsable de su dispositivo.\nA su vez, se utiliza esta información para calcular la huella de carbono resultante de la energía gastada por el dispositivo.\nEs posible que de forma periódica, los datos sean envíados directamente a un servidor privado, de forma que los Administradores realicen un procesamiento sobre estos y así puedan encontrar patrones de comportamiento, así como detalles que consideren relevantes para realizar un trabajo de investigación, que pueda brindarle algún beneficio futuro al usuario.
        \n\nLos Administradores estan altamente comprometidos para cumplir con el compromiso de mantener la información del usuario segura.\nSe utilizan los sistemas más avanzados proporcionados por la empresa Google LLC, que son actualizados constantemente para asegurarse que no exista ningún acceso no autorizado.
        \n\nEnlaces a Terceros
        \n\nESCO²M puede contener enlaces para descargar otras aplicaciones de Video Streaming que pudieran ser de interés para el usuario.\nUna vez que el usuario acceda a estos enlaces y abandone la aplicación, los Administradores ya no tendrán control sobre el sitio al que se es redirigido y por lo tanto no son responsables de los términos o privacidad ni de la protección de los datos del usuario en esos otros sitios terceros.\nDichos sitios están sujetos a sus propias políticas de privacidad por lo cual es recomendable que el usuario los consulte para confirmar que está de acuerdo con estas.
        \n\nControl de su información personal
        \n\nEn cualquier momento el usuario puede restringir la recopilación o el uso de la información que es proporcionada a ESCO²M.\nPara esto, el usuario deberá de comunicarse por el medio correspondiente (por ejemplo, correo electrónico) con los Administradores para pedir la cancelación de la recopilación de los datos.
        \n\nLos Administradores no venderán, cederán ni distribuirán la información que es recopilada sin el consentimiento del usuario, salvo que esta sea requerida por un juez con una orden judicial.
        \n\nESCO²M se reserva el derecho de cambiar los términos del presente Acuerdo de Privacidad en cualquier momento.
    </string>
    <string name="sixth_btn">Regresar al Menú Principal</string>
    <string name="frag_tv_0">Consejo 0%d</string>
    <string name="frag_01_tv_01">Protege tu dispositivo móvil de caídas</string>
    <string name="frag_01_tv_02">Si tu dispositivo móvil se cae, tienes que comprar otro y es más daño al ambiente, por eso ponle una funda para protegerlo.</string>
    <string name="frag_01_iv_01">Teléfono cayendo, dibujo</string>
    <string name="frag_01_iv_02">Funda de teléfono</string>
    <string name="frag_02_tv_01">Protege la pantalla de tu dispositivo móvil</string>
    <string name="frag_02_tv_02">Si la pantalla de tu dispositivo móvil se raya o rompe, no funcionará correctamente y tendrás que comprarte otro, para evitar esto, ponle una mica (cubierta) protectora.</string>
    <string name="frag_02_iv_01">Teléfono rayado, pantalla rota</string>
    <string name="frag_02_iv_02">Mica protectora aplicándose a teléfono</string>
    <string name="frag_03_tv_01">Intenta primero reparar tu dispositivo móvil</string>
    <string name="frag_03_tv_02">En caso de que tu dispositivo se estropee o rompa, intenta repararlo primero, que una pequeña falla no sea excusa para cambiarlo.</string>
    <string name="frag_03_iv_01">Teléfono en reparación</string>
    <string name="frag_04_tv_01">Evita la descarga completa</string>
    <string name="frag_04_tv_02">Dejar que la batería se descargue por completo (0%) propicia a que se degrade rápidamente la salud de la batería. Para evitar esto se recomienda que se cargue el dispositivo móvil cuando la batería alcance el 20%; por lo general, los dispositivos notifican al usuario cuando esto sucede o el icono de la batería se torna de un color rojo. Esto entra en la "regla de oro": 20–80.</string>
    <string name="frag_04_iv_01">Teléfono descargado, batería baja</string>
    <string name="frag_05_tv_01">Evite dejar el dispositivo enchufado</string>
    <string name="frag_05_tv_02">Cuando la carga del dispositivo móvil se encuentra cerca de su capacidad máxima, se fuerzan y degradan las celdas de iones, lo que se traduce en que su salud se resiente y la autonomía baja con el tiempo. Por esto se recomienda desconectar el dispositivo del enchufe cuando este alcance un 80% de carga. Esto entra en la "regla de oro": 20–80</string>
    <string name="frag_05_iv_01">Prohibido carga al maximo, X 100%</string>
    <string name="frag_06_tv_01">Consejo para cuidar la batería</string>
    <string name="frag_06_tv_02">Un consejo para cuidar la batería de tu móvil es reducir el brillo de la pantalla y usar el brillo automático. Esto puede ayudar a prolongar la duración de la batería considerablemente.</string>
    <string name="frag_07_tv_01">Desactiva las Conexiones Innecesarias</string>
</resources>