<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Consejo01Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/frag_01_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frag_tv_0"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frag_01_tv_01"
            android:textSize="25sp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:gravity="center"
            android:layout_marginVertical="25dp"
            android:layout_marginHorizontal="30dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:src="@drawable/frag_01_iv_01"
            android:contentDescription="@string/frag_01_iv_01"
            android:scaleType="centerInside"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:textAlignment="center"
            android:textStyle="bold|italic"
            android:textAppearance="?attr/textAppearanceBody1"
            android:text="@string/frag_01_tv_02"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:src="@drawable/frag_01_iv_02"
            android:contentDescription="@string/frag_01_iv_02"
            android:scaleType="centerInside"/>

    </LinearLayout>

</FrameLayout>