<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="68dp"/>
            <!--app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"-->

        <Button
            android:id="@+id/main_btn_01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_btn_01"
            android:textSize="17sp"
            android:layout_weight="1"
            android:layout_marginHorizontal="60dp"
            android:layout_marginBottom="38dp"/>

        <Button
            android:id="@+id/main_btn_02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_btn_02"
            android:textSize="17sp"
            android:layout_weight="1"
            android:layout_marginHorizontal="60dp"
            android:layout_marginBottom="38dp"/>

        <Button
            android:id="@+id/main_btn_03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_btn_03"
            android:textSize="17sp"
            android:layout_weight="1"
            android:layout_marginHorizontal="60dp"
            android:layout_marginBottom="38dp"/>

        <Button
            android:id="@+id/main_btn_04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_btn_04"
            android:textSize="17sp"
            android:layout_weight="1"
            android:layout_marginHorizontal="60dp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:id="@+id/main_tv"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/main_tv_01"
            android:textSize="17sp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginBottom="40dp"
            android:clickable="true"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>