<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    tools:context=".Consejo02Fragment"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/frag_02_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frag_02_tv_01"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:maxLines="2"
            android:padding="20dp"
            android:gravity="center"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:src="@drawable/ic_pantallaproteger"
            android:contentDescription="@string/frag_02_iv_01"
            android:scaleType="centerInside"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:textAlignment="center"
            android:textStyle="bold|italic"
            android:textAppearance="?attr/textAppearanceBody1"
            android:text="@string/frag_02_tv_02"/>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/frag_02_iv_02"
            android:contentDescription="@string/frag_02_iv_02"
            android:scaleType="centerInside"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>