<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Consejo05Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/frag_05_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frag_05_tv_01"
            android:gravity="center"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:src="@drawable/frag_05_iv_01"
            android:contentDescription="@string/frag_05_iv_01"
            android:scaleType="centerInside"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frag_05_tv_02"/>

        <!-- Aquí se podría colocar una recomendación para
             establecer una alarma o notificación cuando el
             teléfono tenga un 80% de batería -->

    </LinearLayout>

</FrameLayout>