<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/secondActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/second_tv_01"
                android:gravity="center"/>

            <ImageButton
                android:id="@+id/second_ibtn_netflix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/netflix"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:contentDescription="@string/second_ibtn_netflix"/>

            <ImageButton
                android:id="@+id/second_ibtn_disneyplus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/disneyplus"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:contentDescription="@string/second_ibtn_disneyplus"/>

            <ImageButton
                android:id="@+id/second_ibtn_hbomax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/hbomax"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:contentDescription="@string/second_ibtn_hbomax"/>

            <ImageButton
                android:id="@+id/second_ibtn_primevideo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/primevideo"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:contentDescription="@string/second_ibtn_primevideo"/>

            <ImageButton
                android:id="@+id/second_ibtn_starplus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/starplus"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:contentDescription="@string/second_ibtn_starplus"/>

            <Button
                android:id="@+id/second_btn_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/second_btn_test"
                android:visibility="gone"/>

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>