<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SixthActivity"
    android:background="@drawable/gradienteuno">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sixth_tv_01"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:layout_marginTop="45dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sixth_tv_02"
                android:textStyle="italic"
                android:textSize="19sp"
                android:textColor="@color/black"
                android:layout_marginVertical="40dp"
                android:layout_marginHorizontal="45dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sixth_tv_03"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="36dp"/>

            <Button
                android:id="@+id/sixth_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sixth_btn"
                android:textSize="20sp"
                android:padding="15dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginBottom="30dp"/>

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>