<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fifthActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FifthActivity"
    android:background="@drawable/gradientedos">

    <LinearLayout
        android:id="@+id/fifth_linlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fifth_tv_01"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:gravity="center"
            android:padding="30dp"
            android:background="@drawable/gradientetres"/>

        <FrameLayout
            android:id="@+id/fifth_frmlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginHorizontal="20dp">

            <Button
                android:id="@+id/fifth_btn_prv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fifth_btn_prv"
                android:textSize="18sp"
                android:layout_marginEnd="10dp"/>

            <Button
                android:id="@+id/fifth_btn_nxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fifth_btn_nxt"
                android:textSize="18sp"
                android:layout_marginStart="10dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>