<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    android:layout_margin="16dp"
    tools:context=".Consejo01Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/frag_05_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="?attr/colorPrimary"
            android:layout_marginBottom="8dp"
            tools:text="@string/frag_06_tv_01"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_bateri"
            android:contentDescription="@string/frag_05_iv_01"
            android:scaleType="centerInside"
            android:layout_marginBottom="16dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textAlignment="center"
            android:textStyle="bold|italic"
            android:text="@string/frag_06_tv_02"
            android:textColor="?attr/colorOnBackground"
            android:layout_marginBottom="16dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:backgroundTint="#4d82bc"
            android:text="Configurar Alarma"
            android:textColor="#FCFFFF"
            app:icon="@drawable/ic_alarm" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
